--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  padding-top: 150px;
 }
 
 .App-logo {
@@ -35,4 +36,38 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.square {
+  width: 100px;
+  height: 100px;
+  background-color: #61dafb;
+  margin: 2px;
+  display: inline-flex; /* Use flexbox for centering */
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  font-size: 2rem; /* Adjust font size for better visibility */
+  font-weight: bold; /* Make the text bold */
+  box-sizing: border-box; /* Include padding and border in size */
+}
+.square:hover {
+  background-color: #21a1f1;
+  transform: scale(1.1);
+  transition: transform 0.2s;
+}
+.square:active {
+  background-color: #147feb;
+  transform: scale(0.9);
+  transition: transform 0.2s;
+}
+
+.computer-first-move{
+  background-color: #21a1f1;
+  transform: scale(1.1);
+  transition: transform 0.2s;
+  width: 150px;
+  height: 60px;
+  margin: 2px;
+  display: inline-block;
 }
